--- a/lessons/d2.cabal
+++ b/lessons/d2.cabal
@@ -54,14 +54,14 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -threaded
 
 library
     -- Import common warning flags.
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  D2, D3, D3_2, D4, D5
+    exposed-modules:  D2, D3, D3_2, D4, D5, D6
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -75,6 +75,8 @@ library
                     , mtl
                     , megaparsec
                     , aeson
+                    , async
+                    , stm
 
     -- Directories containing source files.
     hs-source-dirs:   src
