Lenses from lens library

--- a/lessons/d2.cabal
+++ b/lessons/d2.cabal
@@ -78,6 +78,7 @@ library
                     , async
                     , stm
                     , random
+                    , lens
 
     -- Directories containing source files.
     hs-source-dirs:   src
